crates/buff-lang-codegen-rust/tests/snapshots/log_codegen__log_codegen_full_main_snapshot_with_subscriber_init.snap
---
source: crates/buff-lang-codegen-rust/tests/log_codegen.rs
assertion_line: 496
expression: src
---
fn main() {
    {
        let __buff_log_filter = tracing_subscriber::EnvFilter::try_from_env("BUFF_LOG")
            .unwrap_or_else(|_| tracing_subscriber::EnvFilter::new("info"));
        let _ = if cfg!(debug_assertions) {
            tracing_subscriber::fmt().with_env_filter(__buff_log_filter).try_init()
        } else {
            tracing_subscriber::fmt()
                .with_env_filter(__buff_log_filter)
                .json()
                .try_init()
        };
    }
    tracing::info!(count = 42, "hello".to_string());
    tracing::error!("oops".to_string());
    {
        if let Ok(__buff_contents) = std::fs::read_to_string(".env") {
            for __buff_line in __buff_contents.lines() {
                let __buff_line = __buff_line.trim();
                if __buff_line.is_empty() || __buff_line.starts_with('#') {
                    continue;
                }
                if let Some((__buff_key, __buff_val)) = __buff_line.split_once('=') {
                    let __buff_k = __buff_key.trim().to_string();
                    let __buff_v = __buff_val.trim().to_string();
                    if !__buff_k.is_empty() && std::env::var(&__buff_k).is_err() {
                        unsafe {
                            std::env::set_var(&__buff_k, &__buff_v);
                        }
                    }
                }
            }
        }
    }
}
